fixed white space

--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,12 @@
 body {
 	min-width: 1280px;
+	
 	width: 100%;
 	height: 100%;
 	margin: 0px;
+	margin-right: -200px;
 	padding: 0px;
+	padding-left: -20px;
 	font-family: 'Raleway', sans-serif;
 	background-color: #FFFFFF;
 
@@ -80,7 +83,7 @@ body {
 	min-width: 1280px;
 	z-index: 100;
 	position: fixed;
-	width: 100%;
+	width: 1280px;
 	height: 50px;
 	background-color: rgba(0,0,0, 0.1);
 
@@ -169,7 +172,7 @@ body {
 	background-repeat: no-repeat;
 	width: 328px;
 	height: 536px;
-	margin: -215px 0px 0px 30px !important;
+	margin: -215px 0px 0px 0px !important;
 }
 .skills{
 	width: 830px;
@@ -326,9 +329,10 @@ body {
 	-webkit-box-shadow: inset 0 0 40px #000000;
 	box-shadow:         inset 0 0 40px #000000;
 	background-color: #3f3f3f;
-	min-width: 800px;
+	max-width: 1280px;
+	min-width: 1280px;
 	height: 360px;
-	padding: 20px;
+	
 
 }
 
@@ -376,7 +380,7 @@ body {
 	background-position: center center;
 	background-size: cover;
 	position: relative;
-	bottom: -30px;
+	bottom: -10px;
 	text-align: center;
 
 
@@ -416,19 +420,23 @@ body {
 
 
 
+
+
 .footer{
 	min-width: 1280px;
 	width: 100%;
-	min-height: 20px;
+	min-height: 30px;
 	background-color: #9dd6b4;
-	padding: 15px;
 
+	
+	
 }
 #leftfooter{
 	width: 480px;
 	height: 25px;
 	float: left;
-	margin-left: 40px;
+	margin-top: 5px;
+	margin-left: 30px;
 }
 #footertext{
 	font-size: 12px;
@@ -436,9 +444,11 @@ body {
 }
 
 #rightfooter{
+	margin-top: 5px;
 	width: 500px;
 	height: 25px;
 	float: right;
-	margin-right: 90px;	
+	margin-right: 30px;
+	
 }
 
